[package]
name = "runtime_patcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "runtime_patcher"
crate-type = ["cdylib"]

[dependencies]
regex = "1.10.3"
rust-ini = "0.20.0"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory_NonVolatile",
    "Win32_System_SystemServices",
]

[profile.release]
strip = true
opt-level = 2
lto = true
incremental = false
codegen-units = 16
